// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendBroadcastForm render should render an empty form with no action 1`] = `
Object {
  "compose": Object {
    "value": "{\\"text\\":\\"\\",\\"attachments\\":[]}",
  },
  "recipients": Object {
    "value": Array [],
  },
  "valid": false,
}
`;

exports[`SendBroadcastForm render should render an empty form with no action 2`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_broadcast"
  title="Send Broadcast"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Send somebody else a message",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "text",
        ],
        "name": "Send Broadcast",
        "type": "send_broadcast",
      }
    }
    onChange={[MockFunction]}
  />
  <AssetSelector
    assets={
      Object {
        "items": Object {},
        "type": "contact",
      }
    }
    entry={
      Object {
        "value": Array [],
      }
    }
    expressions={true}
    multi={true}
    name="Recipients"
    onChange={[Function]}
    placeholder="Select Contacts"
    searchable={true}
  />
  <p />
  <ComposeElement
    attachments={true}
    chatbox={true}
    counter={true}
    entry={
      Object {
        "value": "{\\"text\\":\\"\\",\\"attachments\\":[]}",
      }
    }
    name="Compose"
    onChange={[Function]}
  />
</Dialog>
`;

exports[`SendBroadcastForm render should render self, children with base props 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_broadcast"
  title="Send Broadcast"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Send somebody else a message",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "text",
        ],
        "name": "Send Broadcast",
        "type": "send_broadcast",
      }
    }
    onChange={[MockFunction]}
  />
  <AssetSelector
    assets={
      Object {
        "items": Object {},
        "type": "contact",
      }
    }
    entry={
      Object {
        "value": Array [
          Object {
            "id": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
            "name": "Cat Fanciers",
            "type": "group",
          },
          Object {
            "id": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "name": "Cat Facts",
            "type": "group",
          },
          Object {
            "id": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "missing": false,
            "name": "Kellan Alexander",
            "type": "contact",
          },
          Object {
            "id": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            "missing": false,
            "name": "Norbert Kwizera",
            "type": "contact",
          },
          Object {
            "id": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
            "missing": false,
            "name": "Rowan Seymour",
            "type": "contact",
          },
        ],
      }
    }
    expressions={true}
    multi={true}
    name="Recipients"
    onChange={[Function]}
    placeholder="Select Contacts"
    searchable={true}
  />
  <p />
  <ComposeElement
    attachments={true}
    chatbox={true}
    counter={true}
    entry={
      Object {
        "value": "{\\"text\\":\\"Hello World\\",\\"attachments\\":[]}",
      }
    }
    name="Compose"
    onChange={[Function]}
  />
</Dialog>
`;

exports[`SendBroadcastForm updates handles compose attachments change 1`] = `
Object {
  "compose": Object {
    "validationFailures": Array [],
    "value": "{\\"text\\":\\"Some message with an attachment\\",\\"attachments\\":[{\\"uuid\\":\\"test1\\",\\"content_type\\":\\"image/png\\",\\"type\\":\\"image/png\\",\\"filename\\":\\"name_test1\\",\\"url\\":\\"url_test1\\",\\"size\\":1024,\\"error\\":null}]}",
  },
  "recipients": Object {
    "value": Array [
      Object {
        "id": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        "name": "Cat Fanciers",
        "type": "group",
      },
      Object {
        "id": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        "name": "Cat Facts",
        "type": "group",
      },
      Object {
        "id": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        "missing": false,
        "name": "Kellan Alexander",
        "type": "contact",
      },
      Object {
        "id": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        "missing": false,
        "name": "Norbert Kwizera",
        "type": "contact",
      },
      Object {
        "id": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
        "missing": false,
        "name": "Rowan Seymour",
        "type": "contact",
      },
    ],
  },
  "valid": true,
}
`;

exports[`SendBroadcastForm updates handles compose text change 1`] = `
Object {
  "compose": Object {
    "validationFailures": Array [],
    "value": "{\\"text\\":\\"Some message\\",\\"attachments\\":[]}",
  },
  "recipients": Object {
    "value": Array [
      Object {
        "id": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        "name": "Cat Fanciers",
        "type": "group",
      },
      Object {
        "id": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        "name": "Cat Facts",
        "type": "group",
      },
      Object {
        "id": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        "missing": false,
        "name": "Kellan Alexander",
        "type": "contact",
      },
      Object {
        "id": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        "missing": false,
        "name": "Norbert Kwizera",
        "type": "contact",
      },
      Object {
        "id": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
        "missing": false,
        "name": "Rowan Seymour",
        "type": "contact",
      },
    ],
  },
  "valid": true,
}
`;

exports[`SendBroadcastForm updates handles recipent change 1`] = `
Object {
  "compose": Object {
    "value": "{\\"text\\":\\"Hello World\\",\\"attachments\\":[]}",
  },
  "recipients": Object {
    "validationFailures": Array [],
    "value": Array [
      Object {
        "id": "group-0",
        "name": "My Group",
      },
    ],
  },
  "valid": true,
}
`;

exports[`SendBroadcastForm updates should allow switching from router 1`] = `
Array [
  Object {
    "attachments": Array [
      Object {
        "content_type": "image/png",
        "error": null,
        "filename": "name_test1",
        "size": 1024,
        "type": "image/png",
        "url": "url_test1",
        "uuid": "test1",
      },
    ],
    "contacts": Array [],
    "groups": Array [],
    "legacy_vars": Array [],
    "text": "Some message with an attachment",
    "type": "send_broadcast",
    "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
  },
]
`;
